--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "cloud-doc",
   "version": "0.1.0",
   "main": "main.js",
+  "description": "Online Markdown Editor using Qiniu cloud service",
+  "author": {
+    "name": "Caikaiquan",
+    "email": "619749636@qq.com"
+  },
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
@@ -27,7 +32,26 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "ele": "electron .",
-    "dev": "concurrently  \"wait-on http://localhost:3000 && electron .\" \"cross-env BROWSER=none npm start\""
+    "dev": "concurrently  \"wait-on http://localhost:3000 && electron .\" \"cross-env BROWSER=none npm start\"",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "prepack": "npm run build"
+  },
+  "homepage": "./",
+  "build": {
+    "appId": "cloudDoc",
+    "productName": "云文档",
+    "copyright": "Copyright © 2021 ${author}",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*/",
+      "settings/**/*",
+      "package.json",
+      "main.js",
+      "./src/menuTemplate.js",
+      "./src/AppWindow.js"
+    ],
+    "extends": null
   },
   "eslintConfig": {
     "extends": [
@@ -51,7 +75,7 @@
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
     "electron": "^11.1.0",
-    "electron-is-dev": "^1.2.0",
+    "electron-builder": "^22.9.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.1.0",
     "wait-on": "^5.2.0"
