--- a/package.json
+++ b/package.json
@@ -8,35 +8,17 @@
     "email": "619749636@qq.com"
   },
   "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
-    "bootstrap": "^4.5.3",
-    "classnames": "^2.2.6",
-    "electron-is-dev": "^1.2.0",
-    "electron-store": "^6.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "react-simplemde-editor": "^4.1.3",
-    "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "buildMain": "webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "ele": "electron .",
     "dev": "concurrently  \"wait-on http://localhost:3000 && electron .\" \"cross-env BROWSER=none npm start\"",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "prepack": "npm run build"
+    "prepack": "npm run build && npm run buildMain"
   },
   "homepage": "./",
   "build": {
@@ -47,13 +29,13 @@
       "build/**/*",
       "node_modules/**/*/",
       "settings/**/*",
-      "package.json",
-      "main.js",
-      "./src/menuTemplate.js",
-      "./src/AppWindow.js"
+      "package.json"
     ],
     "directories": {
       "buildResources": "assets"
+    },
+    "extraMetadata": {
+      "main": "./build/main.js"
     },
     "extends": null,
     "mac": {
@@ -115,13 +97,33 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "bootstrap": "^4.5.3",
+    "electron-store": "^6.0.1"
+  },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
     "electron": "^11.1.0",
     "electron-builder": "^22.9.1",
+    "electron-is-dev": "^1.2.0",
     "node-sass": "^4.14.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "^4.0.1",
+    "react-simplemde-editor": "^4.1.3",
     "sass-loader": "^10.1.0",
-    "wait-on": "^5.2.0"
+    "uuid": "^8.3.2",
+    "wait-on": "^5.2.0",
+    "web-vitals": "^0.2.4",
+    "webpack-cli": "^4.3.1"
   }
 }
